rollouts-lab-app/deployment.yaml
# This represents your CURRENT live Deployment, before Rollouts.
# Apply this first and confirm it's serving traffic normally.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: argoproj/rollouts-demo:yellow
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 5m
              memory: 16Mi
