rollouts-lab-app/active-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-active
  namespace: demo
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: rollouts-demo
