rollouts-lab-app/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-preview
  namespace: demo
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: rollouts-demo
