rollouts-lab-app/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: rollouts-demo-gateway
  namespace: demo
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "rollouts-demo.local"
